fix sillsdev/web-languageforge#34: Can't find lexeme when searching (part 2)
Improved search box usability by returning the top 50 matches, where 7 are visible at a time, and adding a scrollbar so the user can navigate to those matches.

Also brought exact matches to lexeme and sense to the top of the matches

--- a/src/angular-app/bellows/css/palaso-ui.css
+++ b/src/angular-app/bellows/css/palaso-ui.css
@@ -20,6 +20,8 @@ div.typeahead > div {
 
 div.typeahead ul {
     margin: 0 2px 2px 2px;
+    overflow-y: scroll;
+    max-height: 300px;
 }
 
 li.typeahead-item {
